objects/APTS_Cost_Matrix_Entry__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Adjustment_Amount__c</fullName>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Adjustment_Type__c</fullName>
        <label>Adjustment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Discrete</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Relative</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Cost_Matrix__c</fullName>
        <label>Cost Matrix</label>
        <referenceTo>APTS_Cost_Matrix__c</referenceTo>
        <relationshipName>Price_Matrix_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>APTS_Dimension_1_Value__c</fullName>
        <label>Dimension 1 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Dimension_2_Value__c</fullName>
        <label>Dimension 2 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Dimension_3_Value__c</fullName>
        <label>Dimension 3 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_DimentionCollabValue__c</fullName>
        <formula>CASESAFEID(APTS_Cost_Matrix__r.Id) + &apos;_&apos; +  IF( NOT(ISNULL( APTS_Dimension_1_Value__c )) ,  APTS_Dimension_1_Value__c , &apos;&apos;) +  IF( NOT(ISNULL( APTS_Dimension_2_Value__c )) ,  APTS_Dimension_2_Value__c , &apos;&apos;) +  IF( NOT(ISNULL( APTS_Dimension_3_Value__c )) ,  APTS_Dimension_3_Value__c , &apos;&apos;) +  IF( NOT(ISNULL( APTS_Dimension_4_Value__c )) ,  APTS_Dimension_4_Value__c , &apos;&apos;) +  IF( NOT(ISNULL( APTS_Dimension_5_Value__c )) ,  APTS_Dimension_5_Value__c , &apos;&apos;) +  IF( NOT(ISNULL( APTS_Dimension_6_Value__c )) ,  APTS_Dimension_6_Value__c , &apos;&apos;)</formula>
        <label>DimentionCollabValue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Entry_Key__c</fullName>
        <externalId>true</externalId>
        <label>Entry Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Ext_ID__c</fullName>
        <externalId>true</externalId>
        <label>APTS Ext ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APTS_Relative_Cost_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relative Cost Type</label>
        <referenceTo>Apttus_Config2__CostType__c</referenceTo>
        <relationshipName>Price_Matrix_Entries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Cost Matrix Entry</label>
    <nameField>
        <displayFormat>CME-{00000000}</displayFormat>
        <label>Cost Matrix Entry Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cost Matrix Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>